# lbm-simulator

./: .gitignore  CMakeLists.txt  README.md  plot.ipynb
benchmark/: CMakeLists.txt  run_collision_benchmarks.cpp  run_feq_benchmarks.cpp  run_propagation_benchmarks.cpp
data/: cavity-flow-2d.json  cavity.json  cavity_cm.json  cavity_mrt.json  cavity_srt.json  poiseuille-flow-2d.json  poiseuille.json  poiseuille_mrt.json
include/: lbm.hpp
include/lbm/: bounce_back_boundary.hpp  boundary_type.hpp  cartesian_grid_2d.hpp  cavity_flow_simulator.hpp  central_moment_model.hpp  collision_model.hpp  file_writer.hpp  halfway_bounce_back_boundary.hpp  lattice.hpp  multiple_relaxation_time_model.hpp  non_orthogonal_central_moment_model.hpp  ongrid_bounce_back_boundary.hpp  periodic_boundary.hpp  poiseuille_flow_simulator.hpp  propagator.hpp  single_relaxation_time_model.hpp  type_traits.hpp
src/: cavity-flow-2d.cpp  cavity_flow_simulator.cpp  central_moment_model.cpp  collision_model.cpp  lbm_simulator.cpp  multiple_relaxation_time_model.cpp  poiseuille-flow-2d.cpp  poiseuille_flow_simulator.cpp  simulator.cpp
